Versão Beta Site Ana Klein Beauty fase inicial - deploy for review pelo cliente

--- a/v1Plaza/index.html
+++ b/v1Plaza/index.html
@@ -71,7 +71,7 @@ Author: ITS Tecnologia Criativa
           <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Serviços</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#testimonials">Depoimentos</a></li>
+          <!-- <li><a href="#testimonials">Depoimentos</a></li> -->
           <!-- 
           <li class="menu-has-children"><a href="">Dropdown</a>
             <ul>
@@ -345,7 +345,7 @@ Author: ITS Tecnologia Criativa
       </div>
     </section>
     <!-- #Parceiros e Fornecedores Section -->
-    <section id="partners" class="wow fadeInUp sec-padding">
+    <!-- <section id="partners" class="wow fadeInUp sec-padding">
       <div class="container">
         <div class="section-header">
           <h2>Marcas e Parceiros</h2>
@@ -364,7 +364,7 @@ Author: ITS Tecnologia Criativa
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- #Portfolio Section -->
     <section id="portfolio" class="wow fadeInUp sec-padding">
       <div class="container">
@@ -487,7 +487,7 @@ Author: ITS Tecnologia Criativa
       </div>
     </section>
     <!-- #Depoimentos Section -->
-    <section id="testimonials" class="wow fadeInUp sec-padding">
+    <!-- <section id="testimonials" class="wow fadeInUp sec-padding">
       <div class="container">
         <div class="section-header">
           <h2>Depoimentos</h2>
@@ -549,7 +549,7 @@ Author: ITS Tecnologia Criativa
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- #Equipe Section -->
     <!-- <section id="team" class="wow fadeInUp sec-padding">
       <div class="container">
