Alterações Iniciais solicitadas pelo cliente

--- a/v1Plaza/index.html
+++ b/v1Plaza/index.html
@@ -70,8 +70,8 @@ Author: ITS Tecnologia Criativa
           <li class="menu-active"><a href="#body">Início</a></li>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Serviços</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <!-- <li><a href="#testimonials">Depoimentos</a></li> -->
+          <!--<li><a href="#portfolio">Portfolio</a></li>
+           <li><a href="#testimonials">Depoimentos</a></li> -->
           <!-- 
           <li class="menu-has-children"><a href="">Dropdown</a>
             <ul>
@@ -315,7 +315,7 @@ Author: ITS Tecnologia Criativa
           </div>
         </div>
 
-        <div class="row" id="servicosRow3">
+        <!-- <div class="row" id="servicosRow3">
           <div class="col-lg-4">
             <div class="box wow fadeInRight" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-map"></i></div>
@@ -340,7 +340,7 @@ Author: ITS Tecnologia Criativa
                 consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section>
@@ -366,7 +366,7 @@ Author: ITS Tecnologia Criativa
       </div>
     </section> -->
     <!-- #Portfolio Section -->
-    <section id="portfolio" class="wow fadeInUp sec-padding">
+    <!-- <section id="portfolio" class="wow fadeInUp sec-padding">
       <div class="container">
         <div class="section-header">
           <h2>Portfolio</h2>
@@ -485,7 +485,7 @@ Author: ITS Tecnologia Criativa
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- #Depoimentos Section -->
     <!-- <section id="testimonials" class="wow fadeInUp sec-padding">
       <div class="container">
@@ -702,23 +702,22 @@ Author: ITS Tecnologia Criativa
   <!--==========================
   Footer
   ============================-->
-  <footer id="footer" class="fixed-bottom">
+  <footer id="footer">
     <div class="container">
       <div class="copyright">
         <div class="social-links text-center">
-          <!-- 
-        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-        <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-        -->
-          <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-          <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+          
+          <a href="#" class="facebook" title="Acesse nosso facebook"><i class="fa fa-facebook"></i></a> 
+          <a href="#" class="instagram" title="Acesse nosso instagram"><i class="fa fa-instagram"></i></a>
         </div>
-        &copy; 2021 - 2022 <strong>Ana Klein Beauty</strong>. Direitos Reservados.
+        <p>&copy; 2021 - 2022 <strong>Ana Klein Beauty</strong></p>
+        <p>Direitos Reservados.</p>
       </div>
-
-      <div class="credits">
-        Desenvolvido por: <a href="https://instagram.com/itstecnologiacriativa/" target="_blank">ITS Tecnologia Criativa</a>
+      
+      <div class="credits py-3">
+        <p>
+        Desenvolvido por: <a href="https://instagram.com/itstecnologiacriativa/">ITS Tecnologia Criativa</a>
+        </p>
       </div>
     </div>
   </footer>
