Alterações de Layout minimas, correção de rotas na página inicial.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Autor: ITS Tecnologia Criativa - Agosto de 2021 - PE
                           <p class="card-text">Recife</p>
                         </div>
                         
-                        <a href="/lojas/indexShRecife.html" target="_self" class="btn-primary" tabindex="-1" title="Loja Shopping Recife">Acesse <i class="bi bi-arrow-right-circle-fill"></i></a>
+                        <a href="lojas/indexShRecife.html" target="_self" class="btn-primary" tabindex="-1" title="Loja Shopping Recife">Acesse <i class="bi bi-arrow-right-circle-fill"></i></a>
                       </div>
                     </div>
                   </div>
@@ -90,7 +90,7 @@ Autor: ITS Tecnologia Criativa - Agosto de 2021 - PE
                           <h3 class="card-title">Shopping</h3>
                           <p class="card-text">Rio Mar</p>
                         </div>
-                        <a href="/lojas/indexShRioMar.html" target="_self" class="btn-primary" tabindex="-1" title="Loja Shopping Rio Mar">Acesse <i class="bi bi-arrow-right-circle-fill"></i></a>
+                        <a href="lojas/indexShRioMar.html" target="_self" class="btn-primary" tabindex="-1" title="Loja Shopping Rio Mar">Acesse <i class="bi bi-arrow-right-circle-fill"></i></a>
                       </div>
                     </div>
                   </div>
@@ -103,7 +103,7 @@ Autor: ITS Tecnologia Criativa - Agosto de 2021 - PE
                           <h3 class="card-title">Shopping</h3>
                           <p class="card-text">Plaza</p>
                         </div>
-                        <a href="/lojas/indexPlaza.html" target="_self" class="btn-primary" tabindex="-1" title="Loja Shopping Plaza">Acesse <i class="bi bi-arrow-right-circle-fill"></i></a>
+                        <a href="lojas/indexPlaza.html" target="_self" class="btn-primary" tabindex="-1" title="Loja Shopping Plaza">Acesse <i class="bi bi-arrow-right-circle-fill"></i></a>
                       </div>
                     </div>
                   </div>
