--- a/lojas/indexShRecife.html
+++ b/lojas/indexShRecife.html
@@ -88,8 +88,8 @@ Author: ITS Tecnologia Criativa
             </ul>
           </li> 
           <li><a href="#price">Price</a></li>-->
-            <li><a href="/">Lojas</a></li>
-            <li><a href="#contact">Contato</a></li>
+          <li><a href="#contact">Contato</a></li>
+          <li><a href="../index.html">Lojas</a></li>
           </ul>
         </nav>
         <!-- #nav-menu-container -->
@@ -119,7 +119,7 @@ Author: ITS Tecnologia Criativa
               <div class="work">
                 <div
                   class="img d-flex"
-                  style="background-image: url(/img/loja1.jpg)"
+                  style="background-image: url(../img/loja1.jpg)"
                 ></div>
               </div>
             </div>
