--- a/lojas/indexShRioMar.html
+++ b/lojas/indexShRioMar.html
@@ -76,8 +76,8 @@ Author: ITS Tecnologia Criativa
 
             <li><a href="#services">Serviços</a></li>
 
-            <li><a href="/">Lojas</a></li>
             <li><a href="#contact">Contato</a></li>
+            <li><a href="../index.html">Lojas</a></li>
           </ul>
         </nav>
         <!-- #nav-menu-container -->
@@ -106,7 +106,7 @@ Author: ITS Tecnologia Criativa
               <div class="work">
                 <div
                   class="img d-flex"
-                  style="background-image: url(/img/loja2.jpg)"
+                  style="background-image: url(../img/loja2.jpg)"
                 ></div>
               </div>
             </div>
