Adicionado contato nos emails das lojas.

--- a/lojas/indexShRecife.html
+++ b/lojas/indexShRecife.html
@@ -1,13 +1,8 @@
-<!-- =================================================
-Cliente: Ana Klein Beauty 
-Site: www.anaklein.com.br
-Author: ITS Tecnologia Criativa
-======================================================= -->
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <title>&copysr; versão Beta:|->|- AK Beauty - Sh Recife</title>
+    <title>&copysr; AK Beauty - Shopping Recife</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -15,17 +10,13 @@ Author: ITS Tecnologia Criativa
     <!-- Favicons -->
     <link href="img/favicon.png" rel="icon" />
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon" />
-
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Montserrat:300,400,700"
       rel="stylesheet"
     />
-
     <!-- Bootstrap CSS File -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- Libraries CSS Files -->
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="lib/animate/animate.min.css" rel="stylesheet" />
     <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet" />
@@ -39,21 +30,17 @@ Author: ITS Tecnologia Criativa
   </head>
 
   <body id="body">
-    <!--==========================
-    Top Bar
-  ============================-->
+    <!-- ==========================Top Bar ============================ -->
     <section id="topbar">
       <div class="container clearfix">
         <div class="contact-info float-left">
           <i class="bi bi-envelope"></i>
-          <a href="mailto:contact@example.com">reserva@anaklein.com.br</a>
-          <i class="bi bi-telephone-fill"></i> 81 9876543210
+          <a href="mailto:contato@anaklein.com.br">contato@anaklein.com.br</a>
+          <i class="bi bi-telephone-fill"></i> 81 99507-1572
         </div>
       </div>
     </section>
-    <!--==========================
-    Header
-  ============================-->
+    <!--  ==========================Header============================ -->
     <header id="header">
       <div class="container">
         <div id="logo" class="pull-left">
@@ -67,29 +54,15 @@ Author: ITS Tecnologia Criativa
             </a>
           </h1>
         </div>
-        <!--==========================
-    NavBar
-  ============================-->
+        <!--========================== NavBar ============================-->
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <li class="menu-active"><a href="#body">Início</a></li>
             <!-- <li><a href="#about">Sobre</a></li> -->
-
             <li><a href="#services">Serviços</a></li>
-            <!--<li><a href="#portfolio">Portfolio</a></li>
-           <li><a href="#testimonials">Depoimentos</a></li> -->
-            <!-- 
-          <li class="menu-has-children"><a href="">Dropdown</a>
-            <ul>
-              <li><a href="#">Link Item 1</a></li>
-              <li><a href="#">Link Item 3</a></li>
-              <li><a href="#">Link Item 4</a></li>
-              <li><a href="#">Link Item 5</a></li>
-            </ul>
-          </li> 
-          <li><a href="#price">Price</a></li>-->
-          <li><a href="#contact">Contato</a></li>
-          <li><a href="../index.html">Lojas</a></li>
+
+            <li><a href="#contact">Contato</a></li>
+            <li><a href="../index.html">Lojas</a></li>
           </ul>
         </nav>
         <!-- #nav-menu-container -->
@@ -99,9 +72,7 @@ Author: ITS Tecnologia Criativa
 
     <!-- #intro -->
     <main id="main">
-      <!--==========================
-      About Section
-    ============================-->
+      <!--========================== About Section =========================== -->
       <section id="about" class="wow fadeInUp sec-padding">
         <div class="container">
           <div class="section-header">
@@ -294,7 +265,7 @@ Author: ITS Tecnologia Criativa
                 <i class="bi bi-envelope"></i>
                 <h3>Email</h3>
                 <p>
-                  <a href="mailto:info@example.com">reserva@anaklein.com.br</a>
+                  <a href="mailto:contato@anaklein.com.br">contato@anaklein.com.br</a>
                 </p>
               </div>
               <div class="contact-email">
@@ -382,25 +353,23 @@ Author: ITS Tecnologia Criativa
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
-          
+
           <div class="container m-5 baseMap"></div>
         </div>
       </section>
       <!-- #contact -->
     </main>
-    <!--==========================
-  Footer
-  ============================-->
+    <!-- ==========================Footer ============================ -->
     <footer id="footer">
       <div class="container">
         <div class="copyright">
           <div class="social-links text-center">
-            <a href="#" class="facebook" title="Acesse nosso facebook"
-              ><i class="bi bi-facebook"></i
-            ></a>
-            <a href="#" class="instagram" title="Acesse nosso instagram"
-              ><i class="bi bi-instagram"></i
-            ></a>
+            <a href="#" class="facebook" title="Acesse nosso facebook">
+              <i class="bi bi-facebook"></i>
+            </a>
+            <a href="#" class="instagram" title="Acesse nosso instagram">
+              <i class="bi bi-instagram"></i>
+            </a>
           </div>
           <p>
             &copy; <span id="start_date"></span> -
@@ -412,9 +381,9 @@ Author: ITS Tecnologia Criativa
         <div class="credits py-3">
           <p>
             Desenvolvido por:
-            <a href="https://instagram.com/itstecnologiacriativa/"
-              >ITS Tecnologia Criativa</a
-            >
+            <a href="https://instagram.com/itstecnologiacriativa/">
+              ITS Tecnologia Criativa
+            </a>
           </p>
         </div>
       </div>
