--- a/lojas/indexShRioMar.html
+++ b/lojas/indexShRioMar.html
@@ -7,7 +7,7 @@ Author: ITS Tecnologia Criativa
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <title>&copysr; versão Beta:|->|- AK Beauty - Sh Recife</title>
+    <title>&copysr; AK Beauty - Shopping Recife</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -46,14 +46,12 @@ Author: ITS Tecnologia Criativa
       <div class="container clearfix">
         <div class="contact-info float-left">
           <i class="bi bi-envelope"></i>
-          <a href="mailto:contact@example.com">reserva@anaklein.com.br</a>
-          <i class="bi bi-telephone-fill"></i> 81 9876543210
+          <a href="mailto:contato@anaklein.com.br">contato@anaklein.com.br</a>
+          <i class="bi bi-telephone-fill"></i> 81 99122-0930
         </div>
       </div>
     </section>
-    <!--==========================
-    Header
-  ============================-->
+    <!--========================== Header ============================-->
     <header id="header">
       <div class="container">
         <div id="logo" class="pull-left">
@@ -67,9 +65,7 @@ Author: ITS Tecnologia Criativa
             </a>
           </h1>
         </div>
-        <!--==========================
-    NavBar
-  ============================-->
+        <!--========================== NavBar ============================-->
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <li class="menu-active"><a href="#body">Início</a></li>
@@ -87,9 +83,7 @@ Author: ITS Tecnologia Criativa
 
     <!-- #intro -->
     <main id="main">
-      <!--==========================
-      About Section
-    ============================-->
+      <!--========================== About Section ============================-->
       <section id="about" class="wow fadeInUp sec-padding">
         <div class="container">
           <div class="section-header">
@@ -281,7 +275,7 @@ Author: ITS Tecnologia Criativa
                 <i class="bi bi-envelope"></i>
                 <h3>Email</h3>
                 <p>
-                  <a href="mailto:info@example.com">reserva@anaklein.com.br</a>
+                  <a href="mailto:contato@anaklein.com.br">contato@anaklein.com.br</a>
                 </p>
               </div>
               <div class="contact-email">
