--- a/lojas/indexPlaza.html
+++ b/lojas/indexPlaza.html
@@ -1,13 +1,8 @@
-<!-- =================================================
-Cliente: Ana Klein Beauty 
-Site: www.anaklein.com.br
-Author: ITS Tecnologia Criativa
-======================================================= -->
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <title>&copysr; versão Beta:|->|- AK Beauty - Sh Plaza</title>
+    <title>&copysr; AK Beauty - Shopping Plaza</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -39,21 +34,17 @@ Author: ITS Tecnologia Criativa
   </head>
 
   <body id="body">
-    <!--==========================
-    Top Bar
-  ============================-->
+    <!--========================== Top Bar ============================-->
     <section id="topbar">
       <div class="container clearfix">
         <div class="contact-info float-left">
           <i class="bi bi-envelope"></i>
-          <a href="mailto:contact@example.com">reserva@anaklein.com.br</a>
-          <i class="bi bi-telephone-fill"></i> 81 9876543210
+          <a href="mailto:contato@anaklein.com.br">contato@anaklein.com.br</a>
+          <i class="bi bi-telephone-fill"></i> 81 99694-1964
         </div>
       </div>
     </section>
-    <!--==========================
-    Header
-  ============================-->
+    <!--========================== Header ============================-->
     <header id="header">
       <div class="container">
         <div id="logo" class="pull-left">
@@ -67,9 +58,7 @@ Author: ITS Tecnologia Criativa
             </a>
           </h1>
         </div>
-        <!--==========================
-    NavBar
-  ============================-->
+        <!-- ========================== NavBar ============================ -->
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <li class="menu-active"><a href="#body">Início</a></li>
@@ -99,9 +88,7 @@ Author: ITS Tecnologia Criativa
 
     <!-- #intro -->
     <main id="main">
-      <!--==========================
-      About Section
-    ============================-->
+      <!--========================== About Section  ============================-->
       <section id="about" class="wow fadeInUp sec-padding">
         <div class="container">
           <div class="section-header">
@@ -317,7 +304,7 @@ Author: ITS Tecnologia Criativa
                 <i class="bi bi-envelope"></i>
                 <h3>Email</h3>
                 <p>
-                  <a href="mailto:info@example.com">reserva@anaklein.com.br</a>
+                  <a href="mailto:contato@anaklein.com.br">contato@anaklein.com.br</a>
                 </p>
               </div>
               <div class="contact-email">
