Ajustes finais antes da publicação.

--- a/lojas/indexPlaza.html
+++ b/lojas/indexPlaza.html
@@ -95,9 +95,15 @@
             <h2>AK Beauty Shopping Plaza</h2>
             <p>
               Nossa unidade está localizada no Piso L2, próximo a loja PB Kids.
+            </p>
+            <p>
               Estamos abertos todos os dias da semana, no horário de
-              funcionamento do Shopping. Você pode fazer o seu agendamento
-              através dos telefones (81) 3266-9723 ou (81) 9 9694-1964.
+              funcionamento do Shopping.
+            </p>
+            <p>Você pode fazer o seu agendamento
+              através dos telefones:
+            </p>
+            <p>(81) 3266-9723 ou (81) 9 9694-1964 <strong>Whatsapp <i class="bi bi-whatsapp"></i></strong>.
             </p>
           </div>
           <div class="row">
@@ -113,28 +119,18 @@
             <div class="col-lg-6 content">
               <h3>Serviços Femininos</h3>
               <p class="py-1 mb-1">
-                Corte, Mechas, Coloração, Escova, Hidratação, Tratamento,
-                Rituais, Lavagem, Babyliss, Escova química, Penteados,
-                Maquiagem, Manicure, Unha acrílica & Unha de gel, Troca de
-                esmalte, Corte de unha, Pedicure,Troca de esmalte, Corte de
-                unha, Tratamento com parafina, Spa do pé, Tratamento para calos,
-                Esfera relaxante, Alongamentos.
+                Corte, Mechas, Coloração, Escova, Hidratação, Tratamentos Kérastase,  Penteado , Maquiagem, Manicure / Pedicure , Alongamento de unhas, Tratamento com parafina, Spa dos pés, Tratamento para calos.
               </p>
               <h3>Estética:</h3>
               <p class="py-1 mb-2">
-                Banho de lua, hidratação corporal, massagem modeladora e
-                relaxante, drenagem linfática, depilação, hidratação facial,
-                limpeza facial, peeling, design de sobrancelha, pintura de henna
+                Hidratação corporal, massagem modeladora e relaxante, drenagem linfática, depilação, limpeza facial, peeling, design de sobrancelha,micropigmentação.
               </p>
               <h3>Serviços Masculinos</h3>
               <p class="py-1 mb-1">
-                Corte, Corte na máquina, Coloração, Luzes invertidas, Coloração
-                de bigode, Barba & bigode, Lavagem Especial, Escova progressiva,
-                Tratamentos e Hidratações;
+                Corte e Barba, Coloração, Escova progressiva, Tratamentos e Hidratações;
               </p>
               <p>
-                <i class="bi bi-exclamation-circle"></i> Temos serviços para
-                crianças.
+                <i class="bi bi-exclamation-circle"></i> Crianças sempre bem-vindas.
               </p>
             </div>
           </div>
