--- a/lojas/indexShRecife.html
+++ b/lojas/indexShRecife.html
@@ -77,12 +77,17 @@
         <div class="container">
           <div class="section-header">
             <h2>AK Beauty Shopping Recife</h2>
+            <p>Nossa unidade está localizada no 2º piso, próximo a loja C&A.</p>
             <p>
-              Nossa unidade está localizada no 2º piso, próximo a loja MR.Cat e
-              a C&A. Estamos abertos todos os dias da semana, no horário de
-              funcionamento do Shopping. Você pode fazer o seu agendamento
-              através dos telefones Telefone: Telefone: (81) 3464.6592 ou (81) 9
-              9507-1572.
+              Estamos abertos todos os dias da semana, no horário de
+              funcionamento do Shopping. 
+            </p>
+            <p>
+              Você pode fazer o seu agendamento através dos telefones:
+            </p>
+            <p>
+              (81) 3464.6592/3464.6593 ou (81) 9 9507-1572 -
+              <strong>Whatsapp <i class="bi bi-whatsapp"></i></strong>.
             </p>
           </div>
           <div class="row">
@@ -98,28 +103,18 @@
             <div class="col-lg-6 content">
               <h3>Serviços Femininos</h3>
               <p class="py-1 mb-1">
-                Corte, Mechas, Coloração, Escova, Hidratação, Tratamento,
-                Rituais, Lavagem, Babyliss, Escova química, Penteados,
-                Maquiagem, Manicure, Unha acrílica & Unha de gel, Troca de
-                esmalte, Corte de unha, Pedicure,Troca de esmalte, Corte de
-                unha, Tratamento com parafina, Spa do pé, Tratamento para calos,
-                Esfera relaxante, Alongamentos.
+                Corte, Mechas, Coloração, Escova, Hidratação, Tratamentos Kérastase,  Penteado , Maquiagem, Manicure / Pedicure , Alongamento de unhas, Tratamento com parafina, Spa dos pés, Tratamento para calos.
               </p>
               <h3>Estética:</h3>
               <p class="py-1 mb-2">
-                Banho de lua, hidratação corporal, massagem modeladora e
-                relaxante, drenagem linfática, depilação, hidratação facial,
-                limpeza facial, peeling, design de sobrancelha, pintura de henna
+                Hidratação corporal, massagem modeladora e relaxante, drenagem linfática, depilação, limpeza facial, peeling, design de sobrancelha,micropigmentação.
               </p>
               <h3>Serviços Masculinos</h3>
               <p class="py-1 mb-1">
-                Corte, Corte na máquina, Coloração, Luzes invertidas, Coloração
-                de bigode, Barba & bigode, Lavagem Especial, Escova progressiva,
-                Tratamentos e Hidratações;
+                Corte e Barba, Coloração, Escova progressiva, Tratamentos e Hidratações;
               </p>
               <p>
-                <i class="bi bi-exclamation-circle"></i> Temos serviços para
-                crianças.
+                <i class="bi bi-exclamation-circle"></i> Crianças sempre bem-vindas.
               </p>
             </div>
           </div>
@@ -265,7 +260,9 @@
                 <i class="bi bi-envelope"></i>
                 <h3>Email</h3>
                 <p>
-                  <a href="mailto:contato@anaklein.com.br">contato@anaklein.com.br</a>
+                  <a href="mailto:contato@anaklein.com.br"
+                    >contato@anaklein.com.br</a
+                  >
                 </p>
               </div>
               <div class="contact-email">
@@ -342,18 +339,19 @@
           </div>
         </div>
 
-        <div id="google-map" class="container map-responsive">
+        <div id="google-map" class="container">
           <h3>Localização</h3>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.8274910396062!2d-34.90685758546962!3d-8.11904028349893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1f427968d6cb%3A0x34787df94f76a149!2sShopping%20Recife!5e0!3m2!1spt-BR!2sbr!4v1656012732466!5m2!1spt-BR!2sbr"
-            width="100%"
-            height="100%"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-
+          <div class="map-responsive">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.8274910396062!2d-34.90685758546962!3d-8.11904028349893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1f427968d6cb%3A0x34787df94f76a149!2sShopping%20Recife!5e0!3m2!1spt-BR!2sbr!4v1656012732466!5m2!1spt-BR!2sbr"
+              width="100%"
+              height="100%"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
           <div class="container m-5 baseMap"></div>
         </div>
       </section>
