Alterações e correções finais antes da publicação

--- a/lojas/indexShRioMar.html
+++ b/lojas/indexShRioMar.html
@@ -7,7 +7,7 @@ Author: ITS Tecnologia Criativa
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <title>&copysr; AK Beauty - Shopping Recife</title>
+    <title>&copysr; AK Beauty - Shopping RioMar</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
